--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@
             align-items: center;
         }
 
-.btn-acheter{
+.acheter{
     background-color: #99ccff;
     color: white;
     border: none;
@@ -129,11 +129,11 @@
   margin-left: 35px;
 }
 
-.btn-acheter:hover{
+.acheter:hover{
     background-color: #EE82EE;
 }
 
-.btn-acheter::after{
+.acheter::after{
     content: "";
     background: #0033cc;
     position: absolut;
@@ -145,7 +145,7 @@
     transform: skewX(-45deg) scale(0,1);
 }
 
-.btn-acheter:active{
+.acheter:active{
   transform: translate(3px);
   box-shadow: 0 10px 20px rgb(255, 255, 255, 0.60);
   color: white;
